Added another recipe.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/tiramisu.html">Tiramisu</a>
+    <a href="./recipes/ice-cake.html">Ice Cream Cake</a>
 </body>
 </html>
