--- a/recipes/ice-cake.html
+++ b/recipes/ice-cake.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Tiramisu</title>
+    <title>Recipes | Ice Cream Cake</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Tiramisu</h1>
-    <img src="../images/tiramisu.jpg" alt="Tiramisu" width="400">
+    <h1>Ice Cream Cake</h1>
+    <img src="../images/sladoledna-torta.jpg" alt="Ice Cream Cake" width="400">
     <h2>Description</h2>
-    <p>In addition to being a delicious dessert, tiramisu offers the perfect segue when trying to steer the Valentine's dinner conversation towards spicier subjects. This heady, mood-elevating concoction is rich and deeply satisfying yet remarkably light in texture. Yes, you can use regular cream cheese, but mascarpone is far superior.</p>
+    <p>This ice cream cake is easy to make with any flavor of ice cream or cake mix you prefer. Frost with your favorite frosting, fudge topping, crushed Oreos, or anything! </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>1 pound mascarpone cheese</li>
-        <li>1 cup white sugar</li>
-        <li>2 tablespoons amaretto liqueur, or more to taste</li>
-        <li>1 cup heave cream</li>
-        <li>1 cup cold espresso</li>
-        <li>24 ladyfingers, lightly toasted</li>
-        <li>2 (1 ounce) squares unsweetened chocolate, divided</li>
+        <li>1 (15.25 ounce) package chocolate cake mix</li>
+        <li>1 cup water</li>
+        <li>3 large eggs</li>
+        <li>1/3 cup vegetable oil</li>
+        <li>1/2 gallon chocolate ice cream</li>
     </ul>
     <h2>Steps</h2>
         <ol>
-            <li>Whisk mascarpone cheese, sugar, and amaretto liqueur together in a bowl until smooth. </li>
-            <li>Beat cream in a glass or metal bowl until soft peaks form. Lift your beater or whisk straight up: whipped cream should form soft mounds rather than a sharp peak. Fold whipped cream into mascarpone mixture. Pour espresso into a separate bowl. </li>
-            <li>Dip 12 ladyfingers into espresso; arrange dipped ladyfingers in an 8-inch square baking pan. Spread ½ mascarpone mixture over ladyfingers; grate 1 chocolate square over mascarpone layer. Dip remaining 12 ladyfingers into espresso; arrange dipped ladyfingers on top. Spread remaining ½ mascarpone mixture over ladyfingers; grate remaining 1 chocolate square over mascarpone layer. Refrigerate tiramisu until set, at least 2 hours. </li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13-inch baking dish. </li>
+            <li>Combine chocolate cake mix, water, eggs, and oil in a large bowl. Beat with an electric mixer on medium speed until smooth, about 2 minutes. Pour batter into the prepared baking dish. </li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, 26 to 30 minutes. Allow to cool completely on a wired rack. </li>
+            <li>Meanwhile, remove the carton paper from ice cream. Set ice cream block on its long side. Use a piece of string or dental floss to cut ice cream in half lengthwise, then place the 2 pieces side-by-side on a sheet of waxed paper. </li>
+            <li>Remove cooled cake from the baking dish and place over the ice cream slabs. Trim cake and ice cream, so the edges are flush. </li>
+            <li>Place a board or serving platter over cake. Holding onto the waxed paper and board, flip ice cream cake over. Remove the waxed paper and smooth the seam between the ice cream slabs. </li>
+            <li>Cover top with waxed paper and freeze until very firm. Decorate as desired. </li>
         </ol>
 </body>
 </html>
