--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/tiramisu.html">Tiramisu</a>
     <a href="./recipes/ice-cake.html">Ice Cream Cake</a>
+    <a href="./recipes/banana-bread.html">Banana Bread</a>
 </body>
 </html>
