--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Tiramisu</title>
+    <title>Recipes | Banana bread</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Tiramisu</h1>
-    <img src="../images/tiramisu.jpg" alt="Tiramisu" width="400">
+    <img src="../images/banana-bread.jpg" alt="Banana Bread" width="400">
     <h2>Description</h2>
-    <p>In addition to being a delicious dessert, tiramisu offers the perfect segue when trying to steer the Valentine's dinner conversation towards spicier subjects. This heady, mood-elevating concoction is rich and deeply satisfying yet remarkably light in texture. Yes, you can use regular cream cheese, but mascarpone is far superior.</p>
+    <p>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>1 pound mascarpone cheese</li>
-        <li>1 cup white sugar</li>
-        <li>2 tablespoons amaretto liqueur, or more to taste</li>
-        <li>1 cup heave cream</li>
-        <li>1 cup cold espresso</li>
-        <li>24 ladyfingers, lightly toasted</li>
-        <li>2 (1 ounce) squares unsweetened chocolate, divided</li>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>¼ teaspoon salt</li>
+        <li>¾ cup brown sugar</li>
+        <li>½ cup butter</li>
+        <li>2 large eggs, beaten</li>
+        <li>2 ⅓ cups mashed overripe bananas</li>
     </ul>
     <h2>Steps</h2>
         <ol>
-            <li>Whisk mascarpone cheese, sugar, and amaretto liqueur together in a bowl until smooth. </li>
-            <li>Beat cream in a glass or metal bowl until soft peaks form. Lift your beater or whisk straight up: whipped cream should form soft mounds rather than a sharp peak. Fold whipped cream into mascarpone mixture. Pour espresso into a separate bowl. </li>
-            <li>Dip 12 ladyfingers into espresso; arrange dipped ladyfingers in an 8-inch square baking pan. Spread ½ mascarpone mixture over ladyfingers; grate 1 chocolate square over mascarpone layer. Dip remaining 12 ladyfingers into espresso; arrange dipped ladyfingers on top. Spread remaining ½ mascarpone mixture over ladyfingers; grate remaining 1 chocolate square over mascarpone layer. Refrigerate tiramisu until set, at least 2 hours. </li>
+            <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan. </li>
+            <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. </li>
+            <li>Pour batter into the prepared loaf pan. </li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes. </li>
+            <li>Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely. </li>
         </ol>
 </body>
 </html>
