--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/tiramisu.html">Tiramisu</a>
-    <a href="./recipes/ice-cake.html">Ice Cream Cake</a>
-    <a href="./recipes/banana-bread.html">Banana Bread</a>
+    <ul>
+        <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+        <li><a href="./recipes/ice-cake.html">Ice Cream Cake</a></li>
+        <li><a href="./recipes/banana-bread.html">Banana Bread</a></li>
+    </ul>  
 </body>
 </html>
