Updated heading text with correct one.

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Tiramisu</h1>
+    <h1>Banana Bread</h1>
     <img src="../images/banana-bread.jpg" alt="Banana Bread" width="400">
     <h2>Description</h2>
     <p>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</p>
